Remove physical address references from legal pages

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -370,7 +370,7 @@
         <span class="callout-icon">🔒</span>
         <p><strong>Plain-language summary:</strong> SnapToolApps extensions and tools are designed with privacy by default. Most processing happens entirely on your device. We do not sell your data, and we collect the minimum information necessary to provide and improve our services.</p>
       </div>
-      <p>This Privacy Policy describes how <strong>Redan Ventures LLC, doing business as SnapTool Labs</strong>, located at <strong>[ENTITY_ADDRESS]</strong> ("we," "our," or "us"), collects, uses, and protects information when you use our browser extensions, web tools, and related software products (collectively, the "Services").</p>
+      <p>This Privacy Policy describes how <strong>Redan Ventures LLC, doing business as SnapTool Labs</strong> ("we," "our," or "us"), collects, uses, and protects information when you use our browser extensions, web tools, and related software products (collectively, the "Services").</p>
       <p>By using our Services, you agree to the practices described in this policy. If you do not agree, please discontinue use and uninstall any extensions.</p>
 
       <div class="highlight-grid">
@@ -673,7 +673,6 @@
         <span class="callout-icon">✉️</span>
         <p>
           <strong>SnapTool Labs</strong> (a DBA of Redan Ventures LLC)<br />
-          [ENTITY_ADDRESS]<br />
           Email: <a href="mailto:snap.tool.labs@gmail.com">snap.tool.labs@gmail.com</a>
         </p>
       </div>
