--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -410,7 +410,7 @@
         <span class="callout-icon">⚠️</span>
         <p><strong>Please read these Terms carefully.</strong> By installing, accessing, or using any SnapToolApps product, you agree to be bound by these Terms of Service and our <a href="privacy-policy.html">Privacy Policy</a>. If you do not agree, do not use the Services.</p>
       </div>
-      <p>These Terms of Service ("Terms") govern your access to and use of the software products, browser extensions, websites, and related services (collectively, the "Services") provided by <strong>Redan Ventures LLC, doing business as SnapTool Labs</strong> ("SnapTool Labs," "we," "us," or "our"), located at <strong>[ENTITY_ADDRESS]</strong>.</p>
+      <p>These Terms of Service ("Terms") govern your access to and use of the software products, browser extensions, websites, and related services (collectively, the "Services") provided by <strong>Redan Ventures LLC, doing business as SnapTool Labs</strong> ("SnapTool Labs," "we," "us," or "our").</p>
       <p>These Terms apply to all users including visitors, free-tier users, and paying subscribers. If you are using the Services on behalf of a company or organization, you represent that you have authority to bind that entity to these Terms.</p>
     </section>
 
@@ -646,7 +646,6 @@
         <span class="callout-icon">✉️</span>
         <p>
           <strong>SnapTool Labs</strong> (a DBA of Redan Ventures LLC)<br />
-          [ENTITY_ADDRESS]<br />
           Email: <a href="mailto:snap.tool.labs@gmail.com">snap.tool.labs@gmail.com</a>
         </p>
       </div>
