Fix dangling mailing address reference in terms of service

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -649,7 +649,7 @@
           Email: <a href="mailto:snap.tool.labs@gmail.com">snap.tool.labs@gmail.com</a>
         </p>
       </div>
-      <p>For legal notices and formal communications, please use the mailing address above. For general support, email is preferred.</p>
+      <p>For legal notices, formal communications, and general support, please contact us via email.</p>
     </section>
   </main>
 </div>
