Update jurisdiction to Minnesota / Hennepin County

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -614,7 +614,7 @@
     <!-- Governing Law -->
     <section id="governing-law">
       <h2>Governing Law &amp; Disputes</h2>
-      <p>These Terms are governed by and construed in accordance with the laws of <strong>[JURISDICTION — e.g., the State of Delaware, USA]</strong>, without regard to conflict-of-law principles. To the extent permitted by law, you and Redan Ventures LLC agree to submit to the personal and exclusive jurisdiction of the courts located in <strong>[VENUE]</strong> for any disputes arising from these Terms.</p>
+      <p>These Terms are governed by and construed in accordance with the laws of <strong>the State of Minnesota, USA</strong>, without regard to conflict-of-law principles. To the extent permitted by law, you and Redan Ventures LLC agree to submit to the personal and exclusive jurisdiction of the courts located in <strong>Hennepin County, Minnesota</strong> for any disputes arising from these Terms.</p>
 
       <h3>Informal Resolution</h3>
       <p>Before filing a formal dispute, you agree to first contact us at <a href="mailto:snap.tool.labs@gmail.com">snap.tool.labs@gmail.com</a> and give us 30 days to attempt informal resolution. Most concerns can be resolved this way.</p>
